# Ghidra-Roblox-Internal-Dumper

./: .gitignore  CMakeLists.txt  Create-Release.ps1  Offsets.hpp  README.md  dumper.config.example  publish.py  run.bat
.github/workflows/: release.yml
Dumping/: CMakeLists.txt  dumper.cpp  kernel_client.cpp  kernel_client.h
Dumps/: Offsets.hpp
Ghidra/: analyze_roblox.py  define_structs.py  find_patterns.py  import_offsets.py
Injection/: CMakeLists.txt  injector.cpp
Kernel/: CMakeLists.txt  driver_main.cpp  hook_manager.cpp  hook_manager.h
